final min-height fix on ios

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html {
 }
 
 body {
-	height: 100%;
+	min-height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
